--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.5.0
+cffi==1.15.1
+cryptography==41.0.3
 Django==4.0.3
 django-filter==23.2
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 importlib-metadata==6.8.0
 Markdown==3.4.4
+pycparser==2.21
+PyJWT==2.8.0
 pytz==2023.3.post1
 sqlparse==0.4.2
 zipp==3.16.2
