--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
 asgiref==3.5.0
+attrs==23.1.0
 cffi==1.15.1
 cryptography==41.0.3
 Django==4.0.3
 django-filter==23.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+drf-spectacular==0.26.4
+drf-standardized-errors==0.12.5
 importlib-metadata==6.8.0
+inflection==0.5.1
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
 Markdown==3.4.4
 pycparser==2.21
 PyJWT==2.8.0
 pytz==2023.3.post1
+PyYAML==6.0.1
+referencing==0.30.2
+rpds-py==0.10.3
 sqlparse==0.4.2
+uritemplate==4.1.1
 zipp==3.16.2
