--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,10 @@ inflection==0.5.1
 jsonschema==4.19.0
 jsonschema-specifications==2023.7.1
 Markdown==3.4.4
+psycopg2==2.9.7
 pycparser==2.21
 PyJWT==2.8.0
+python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.30.2
